[package]
name = "vegetables_and_hummus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
float-cmp = "0.9"
gl="0.14"
image="0.24"
itertools = "0.12"
nalgebra="0.32"
noise = "*"
rand = "0.8"
random_choice = "*"
rayon="1.8"
sdl2="0.36"
bvh = "0.9"
ordered-float = "4.2"
